Actualizados los enlaces y traducciones.

--- a/Translation/ca_ES.json
+++ b/Translation/ca_ES.json
@@ -1,3 +1,4 @@
 {
-    "Modelo130": "Modelo130"
+    "model-130": "Model 130",
+    "model-130-p": "El Model 130 és una declaració trimestral de l'impost de la renda de les persones físiques (IRPF) en el qual es liquida el pagament fraccionat d'aquest impost, a compte de la declaració anual que es realitza l'any següent."
 }
