--- a/Translation/de_DE.json
+++ b/Translation/de_DE.json
@@ -1,3 +1,4 @@
 {
-    "model-130": "Modelo 130"
+    "model-130": "Modelo 130",
+    "model-130-p": "Model 130 is a quarterly declaration of personal income tax (PIT) in which the installment payment of this tax is settled, on account of the annual declaration that is made the following year."
 }
