--- a/Translation/fr_FR.json
+++ b/Translation/fr_FR.json
@@ -1,3 +1,4 @@
 {
-    "model-130": "Modelo 130"
+    "model-130": "Formulaire 130",
+    "model-130-p": "Le formulaire 130 est une déclaration trimestrielle de l'impôt sur le revenu des personnes physiques (IRPP) dans laquelle le paiement de cet impôt est réglé par acomptes, compte tenu de la déclaration annuelle à effectuer l'année suivante."
 }
