--- a/Translation/es_MX.json
+++ b/Translation/es_MX.json
@@ -1,3 +1,4 @@
 {
-    "Modelo130": "Modelo130"
+    "model-130": "Modelo 130",
+    "model-130-p": "El Modelo 130 es una declaración trimestral del impuesto de la renta de las personas físicas (IRPF) en el que se liquida el pago fraccionado de este impuesto, a cuenta de la declaración anual que se realiza el año siguiente."
 }
