--- a/Translation/eu_ES.json
+++ b/Translation/eu_ES.json
@@ -1,3 +1,4 @@
 {
-    "Modelo130": "Modelo130"
+    "model-130": "130 Eredua",
+    "model-130-p": "130 eredua hiru hilean behin pertsona fisikoen errentaren gaineko zergaren aitorpena da (IRPF) bertan zerga honen ordainketa zatikatua likidatzen da, hurrengo urtean egiten den urteko aitorpenaren kontura."
 }
