--- a/Translation/gl_ES.json
+++ b/Translation/gl_ES.json
@@ -1,3 +1,4 @@
 {
-    "Modelo130": "Modelo130"
+    "model-130": "Modelo 130",
+    "model-130-p": "O Modelo 130 é unha declaración trimestral do imposto da renta das personas físicas (IRPF) no que se liquida o pago fraccionado deste imposto, a conta da declaración anual que se realiza no ano seguinte."
 }
