--- a/Translation/va_ES.json
+++ b/Translation/va_ES.json
@@ -1,3 +1,12 @@
 {
-    "Modelo130": "Modelo130"
+    "after-deduct": "sobre casilla 04",
+    "model-130": "Modelo 130",
+    "model-130-p": "El Modelo 130 es una declaración trimestral del impuesto de la renta de las personas físicas (IRPF) en el que se liquida el pago fraccionado de este impuesto, a cuenta de la declaración anual que se realiza el año siguiente.",
+    "model-130-r": "Datos acumulados del período comprendido entre el primer día del año y el último día del trimestre",
+    "net-total": "Rendimiento neto",
+    "pct-to-deduct": "% a deducir",
+    "previous-model": "Ingresos trimestres anteriores",
+    "tax-expenses": "Gastos deducibles",
+    "tax-incomes": "Ingresos computables",
+    "tax-negative-info": "Si da pérdidas (negativo) = 0"
 }
