--- a/Translation/en_EN.json
+++ b/Translation/en_EN.json
@@ -1,4 +1,12 @@
 {
+    "after-deduct": "about box 04",
     "model-130": "Model 130",
-    "model-130-p": "Model 130 is a quarterly declaration of personal income tax (PIT) in which the installment payment of this tax is settled, on account of the annual declaration that is made the following year."
+    "model-130-p": "Model 130 is a quarterly declaration of personal income tax (PIT) in which the installment payment of this tax is settled, on account of the annual declaration that is made the following year.",
+    "model-130-r": "Accumulated data for the period between the first day of the year and the last day of the quarter",
+    "net-total": "Net return",
+    "pct-to-deduct": "% to deduct",
+    "previous-model": "Previous quarters income",
+    "tax-expenses": "Deductible expenses",
+    "tax-incomes": "Computable income",
+    "tax-negative-info": "If it gives losses (negative) = 0"
 }
