--- a/Translation/eu_ES.json
+++ b/Translation/eu_ES.json
@@ -1,4 +1,12 @@
 {
+    "after-deduct": "04 koadroari buruz",
     "model-130": "130 Eredua",
-    "model-130-p": "130 eredua hiru hilean behin pertsona fisikoen errentaren gaineko zergaren aitorpena da (IRPF) bertan zerga honen ordainketa zatikatua likidatzen da, hurrengo urtean egiten den urteko aitorpenaren kontura."
+    "model-130-p": "130 eredua hiru hilean behin pertsona fisikoen errentaren gaineko zergaren aitorpena da (IRPF) bertan zerga honen ordainketa zatikatua likidatzen da, hurrengo urtean egiten den urteko aitorpenaren kontura.",
+    "model-130-r": "Urteko lehen egunaren eta hiruhilekoaren azken egunaren aldi arteko datuak",
+    "net-total": "Etekin garbia",
+    "pct-to-deduct": "Kentzeko %",
+    "previous-model": "Aurreko hiruhilekoetako sarrerak",
+    "tax-expenses": "Gastu kengarriak",
+    "tax-incomes": "Errenta konputagarria",
+    "tax-negative-info": "Galerak ematen baditu (negatiboak) = 0"
 }
