--- a/Translation/de_DE.json
+++ b/Translation/de_DE.json
@@ -1,8 +1,9 @@
 {
     "after-deduct": "sobre casilla 04",
     "model-130": "Modelo 130",
+    "model-130-desc": "Se calcula sumando y acumulando cada trimestre, por ejemplo, si visualizamos el 3º trimestre veremos la suma de los trimestres 1, 2 y 3.",
     "model-130-p": "Model 130 is a quarterly declaration of personal income tax (PIT) in which the installment payment of this tax is settled, on account of the annual declaration that is made the following year.",
-    "model-130-r": "Datos acumulados del período comprendido entre el primer día del año y el último día del trimestre",
+    "model-130-r": "Kumulierte Daten für den Zeitraum zwischen dem ersten Tag des Jahres und dem letzten Tag des ausgewählten Quartals.",
     "net-total": "Rendimiento neto",
     "pct-to-deduct": "% a deducir",
     "previous-model": "Ingresos trimestres anteriores",
