--- a/Translation/eu_ES.json
+++ b/Translation/eu_ES.json
@@ -1,8 +1,9 @@
 {
     "after-deduct": "04 koadroari buruz",
     "model-130": "130 Eredua",
+    "model-130-desc": "Se calcula sumando y acumulando cada trimestre, por ejemplo, si visualizamos el 3º trimestre veremos la suma de los trimestres 1, 2 y 3.",
     "model-130-p": "130 eredua hiru hilean behin pertsona fisikoen errentaren gaineko zergaren aitorpena da (IRPF) bertan zerga honen ordainketa zatikatua likidatzen da, hurrengo urtean egiten den urteko aitorpenaren kontura.",
-    "model-130-r": "Urteko lehen egunaren eta hiruhilekoaren azken egunaren aldi arteko datuak",
+    "model-130-r": "Urteko lehen egunaren eta hautatutako hiruhilekoaren azken egunaren arteko aldirako metatutako datuak.",
     "net-total": "Etekin garbia",
     "pct-to-deduct": "Kentzeko %",
     "previous-model": "Aurreko hiruhilekoetako sarrerak",
