--- a/Translation/pt_PT.json
+++ b/Translation/pt_PT.json
@@ -1,8 +1,9 @@
 {
     "after-deduct": "sobre casilla 04",
     "model-130": "Modelo 130",
+    "model-130-desc": "Se calcula sumando y acumulando cada trimestre, por ejemplo, si visualizamos el 3º trimestre veremos la suma de los trimestres 1, 2 y 3.",
     "model-130-p": "El Modelo 130 es una declaración trimestral del impuesto de la renta de las personas físicas (IRPF) en el que se liquida el pago fraccionado de este impuesto, a cuenta de la declaración anual que se realiza el año siguiente.",
-    "model-130-r": "Datos acumulados del período comprendido entre el primer día del año y el último día del trimestre",
+    "model-130-r": "Dados acumulados para o período entre o primeiro dia do ano e o último dia do trimestre selecionado.",
     "net-total": "Rendimiento neto",
     "pct-to-deduct": "% a deducir",
     "previous-model": "Ingresos trimestres anteriores",
