Actualizadas las traducciones.

--- a/Translation/ca_ES.json
+++ b/Translation/ca_ES.json
@@ -1,7 +1,7 @@
 {
     "after-deduct": "sobre casella 04",
     "model-130": "Model 130",
-    "model-130-desc": "Se calcula sumando y acumulando cada trimestre, por ejemplo, si visualizamos el 3º trimestre veremos la suma de los trimestres 1, 2 y 3.",
+    "model-130-desc": "Es calcula sumant i acumulant cada trimestre, per exemple, si visualitzem el 3r trimestre veurem la suma dels trimestres 1, 2 i 3.",
     "model-130-p": "El Model 130 és una declaració trimestral de l'impost de la renda de les persones físiques (IRPF) en el qual es liquida el pagament fraccionat d'aquest impost, a compte de la declaració anual que es realitza l'any següent.",
     "model-130-r": "Dades acumulades del període comprès entre el primer dia de l'any i el darrer dia del trimestre seleccionat.",
     "net-total": "Rendiment net",
