--- a/Translation/de_DE.json
+++ b/Translation/de_DE.json
@@ -1,5 +1,6 @@
 {
     "after-deduct": "nach Feld 04",
+    "deductible-subaccounts": "Cuentas deducibles",
     "model-130": "Modell 130",
     "model-130-desc": "Se calcula sumando y acumulando cada trimestre, por ejemplo, si visualizamos el 3º trimestre veremos la suma de los trimestres 1, 2 y 3.",
     "model-130-p": "Model 130 is a quarterly declaration of personal income tax (PIT) in which the installment payment of this tax is settled, on account of the annual declaration that is made the following year.",
