--- a/Translation/va_ES.json
+++ b/Translation/va_ES.json
@@ -1,5 +1,6 @@
 {
     "after-deduct": "sobre casella 04",
+    "deductible-subaccounts": "Cuentas deducibles",
     "model-130": "Modelo 130",
     "model-130-desc": "Es calcula sumant i acumulant cada trimestre, per exemple, si visualitzem el 3r trimestre veurem la suma dels trimestres 1, 2 i 3.",
     "model-130-p": "El Modelo 130 es una declaración trimestral del impuesto de la renta de las personas físicas (IRPF) en el que se liquida el pago fraccionado de este impuesto, a cuenta de la declaración anual que se realiza el año siguiente.",
