Actualizada la versión y traducciones.

--- a/Translation/cs_CZ.json
+++ b/Translation/cs_CZ.json
@@ -1,6 +1,6 @@
 {
     "after-deduct": "sobre casilla 04",
-    "deductible-subaccounts": "Cuentas deducibles",
+    "deductible-subaccounts": "Odečitatelné účty",
     "model-130": "Modelo 130",
     "model-130-desc": "Vypočítává se sčítáním a akumulací každého čtvrtletí, například pokud zobrazíme 3. čtvrtletí, uvidíme součet prvních tří čtvrtletí.",
     "model-130-p": "El Modelo 130 es una declaración trimestral del impuesto de la renta de las personas físicas (IRPF) en el que se liquida el pago fraccionado de este impuesto, a cuenta de la declaración anual que se realiza el año siguiente.",
