--- a/Translation/ca_ES.json
+++ b/Translation/ca_ES.json
@@ -1,6 +1,6 @@
 {
     "after-deduct": "sobre casella 04",
-    "deductible-subaccounts": "Cuentas deducibles",
+    "deductible-subaccounts": "Comptes deduïbles",
     "model-130": "Model 130",
     "model-130-desc": "Es calcula sumant i acumulant cada trimestre, per exemple, si visualitzem el 3r trimestre veurem la suma dels trimestres 1, 2 i 3.",
     "model-130-p": "El Model 130 és una declaració trimestral de l'impost de la renda de les persones físiques (IRPF) en el qual es liquida el pagament fraccionat d'aquest impost, a compte de la declaració anual que es realitza l'any següent.",
