--- a/Translation/fr_FR.json
+++ b/Translation/fr_FR.json
@@ -1,6 +1,6 @@
 {
     "after-deduct": "sur case 04",
-    "deductible-subaccounts": "Cuentas deducibles",
+    "deductible-subaccounts": "Comptes déductibles",
     "model-130": "Formulaire 130",
     "model-130-desc": "Il est calculé en ajoutant et cumulant chaque trimestre, par exemple, si nous visualisons le 3ème trimestre, nous verrons la somme des trimestres 1, 2 et 3.",
     "model-130-p": "Le formulaire 130 est une déclaration trimestrielle de l'impôt sur le revenu des personnes physiques (IRPP) dans laquelle le paiement de cet impôt est réglé par acomptes, compte tenu de la déclaration annuelle à effectuer l'année suivante.",
