--- a/Translation/pt_PT.json
+++ b/Translation/pt_PT.json
@@ -1,14 +1,14 @@
 {
     "after-deduct": "sobre a caixa 04",
-    "deductible-subaccounts": "Cuentas deducibles",
+    "deductible-subaccounts": "Contas dedutíveis",
     "model-130": "Modelo 130",
     "model-130-desc": "É calculado somando e acumulando cada trimestre, por exemplo, se visualizarmos o 3º trimestre veremos a soma dos trimestres 1, 2 e 3.",
-    "model-130-p": "El Modelo 130 es una declaración trimestral del impuesto de la renta de las personas físicas (IRPF) en el que se liquida el pago fraccionado de este impuesto, a cuenta de la declaración anual que se realiza el año siguiente.",
+    "model-130-p": "O Modelo 130 é uma declaração trimestral do imposto sobre o rendimento das pessoas singulares (IRS) em que se liquida o pagamento fracionado deste imposto, a título da declaração anual que é feita no ano seguinte.",
     "model-130-r": "Dados acumulados para o período entre o primeiro dia do ano e o último dia do trimestre selecionado.",
-    "net-total": "Rendimiento neto",
-    "pct-to-deduct": "% a deducir",
+    "net-total": "Rendimento líquido",
+    "pct-to-deduct": "% a deduzir",
     "previous-model": "Receitas de trimestres anteriores",
-    "tax-expenses": "Gastos deducibles",
+    "tax-expenses": "Despesas dedutíveis",
     "tax-incomes": "Impostos sobre rendimentos",
-    "tax-negative-info": "Si da pérdidas (negativo) = 0"
+    "tax-negative-info": "Se der perdas (negativo) = 0"
 }
