--- a/Translation/va_ES.json
+++ b/Translation/va_ES.json
@@ -1,14 +1,14 @@
 {
     "after-deduct": "sobre casella 04",
-    "deductible-subaccounts": "Cuentas deducibles",
+    "deductible-subaccounts": "Comptes deduïbles",
     "model-130": "Modelo 130",
     "model-130-desc": "Es calcula sumant i acumulant cada trimestre, per exemple, si visualitzem el 3r trimestre veurem la suma dels trimestres 1, 2 i 3.",
     "model-130-p": "El Modelo 130 es una declaración trimestral del impuesto de la renta de las personas físicas (IRPF) en el que se liquida el pago fraccionado de este impuesto, a cuenta de la declaración anual que se realiza el año siguiente.",
     "model-130-r": "Datos acumulados del período comprendido entre el primer día del año y el último día del trimestre seleccionado.",
-    "net-total": "Rendimiento neto",
+    "net-total": "Rendiment net",
     "pct-to-deduct": "% a deduir",
     "previous-model": "Ingressos trimestrals anteriors",
-    "tax-expenses": "Gastos deducibles",
+    "tax-expenses": "Despeses deduïbles",
     "tax-incomes": "Ingressos computables",
-    "tax-negative-info": "Si da pérdidas (negativo) = 0"
+    "tax-negative-info": "Si dóna pèrdues (negatiu) = 0"
 }
